--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <title>DateX</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>DateX Agency</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #0d0d0d;
+      color: #f5f5f5;
+    }
+
+    header {
+      background-color: #000;
+      padding: 20px;
+      text-align: center;
+      border-bottom: 2px solid gold;
+    }
+
+    header h1 {
+      color: gold;
+      font-size: 2.5em;
+      margin: 0;
+    }
+
+    main {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    main h2 {
+      font-size: 1.8em;
+      color: gold;
+    }
+
+    main p {
+      font-size: 1.1em;
+      max-width: 600px;
+      margin: 20px auto;
+    }
+
+    footer {
+      background-color: #000;
+      color: #777;
+      text-align: center;
+      padding: 20px;
+      border-top: 1px solid #222;
+    }
+  </style>
 </head>
 <body>
-  <h1>Добро пожаловать на сайт DateX</h1>
-  <p>Скоро здесь будет что-то крутое!</p>
+  <header>
+    <h1>DateX Agency</h1>
+  </header>
+  <main>
+    <h2>Добро пожаловать</h2>
+    <p>Премиальное агентство знакомств с лучшими моделями из Украины и Европы. Мы соединяем сердца, создаём эмоции и бизнес-партнёрства.</p>
+  </main>
+  <footer>
+    © 2025 DateX. Все права защищены.
+  </footer>
 </body>
 </html>
