--- a/index.html
+++ b/index.html
@@ -1,65 +1,92 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DateX Agency</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DateX | Дейтинговое агентство</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0d0d0d;
-      color: #f5f5f5;
-    }
-
-    header {
+      font-family: Arial, sans-serif;
       background-color: #000;
-      padding: 20px;
-      text-align: center;
-      border-bottom: 2px solid gold;
+      color: #fff;
     }
-
+    header {
+      background-color: #111;
+      padding: 30px;
+      text-align: center;
+    }
     header h1 {
       color: gold;
-      font-size: 2.5em;
-      margin: 0;
+      font-size: 36px;
+      margin-bottom: 10px;
     }
-
-    main {
-      padding: 40px 20px;
-      text-align: center;
+    nav {
+      background: #1a1a1a;
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      padding: 15px 0;
     }
-
-    main h2 {
-      font-size: 1.8em;
+    nav a {
       color: gold;
+      text-decoration: none;
+      font-weight: bold;
     }
-
-    main p {
-      font-size: 1.1em;
-      max-width: 600px;
-      margin: 20px auto;
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
     }
-
+    h2 {
+      color: gold;
+      margin-bottom: 10px;
+    }
     footer {
-      background-color: #000;
-      color: #777;
-      text-align: center;
+      background: #111;
       padding: 20px;
-      border-top: 1px solid #222;
+      text-align: center;
+      color: gray;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>DateX Agency</h1>
+    <h1>DateX</h1>
+    <p>Эксклюзивное дейтинговое агентство</p>
   </header>
-  <main>
-    <h2>Добро пожаловать</h2>
-    <p>Премиальное агентство знакомств с лучшими моделями из Украины и Европы. Мы соединяем сердца, создаём эмоции и бизнес-партнёрства.</p>
-  </main>
+
+  <nav>
+    <a href="#services">Услуги</a>
+    <a href="#reviews">Отзывы</a>
+    <a href="#contacts">Контакты</a>
+  </nav>
+
+  <section id="services">
+    <h2>Услуги</h2>
+    <ul>
+      <li>Подбор перспективных девушек-моделей</li>
+      <li>Полное сопровождение профиля</li>
+      <li>Создание и оформление анкет на крупных дейтинг-платформах</li>
+      <li>Обучение и поддержка 24/7</li>
+      <li>Работа с зарубежными сайтами (Dream Singles, Dating.com и др.)</li>
+    </ul>
+  </section>
+
+  <section id="reviews">
+    <h2>Отзывы</h2>
+    <p>"Отличный подход, за 2 месяца вышел на стабильный доход." — Артём</p>
+    <p>"Хорошая команда, всегда помогают и подсказывают." — Кристина</p>
+  </section>
+
+  <section id="contacts">
+    <h2>Контакты</h2>
+    <p>Связь через Telegram: <strong>@oliverwork999</strong></p>
+    <p>Email: contact@datex.agency (вставишь свой)</p>
+  </section>
+
   <footer>
-    © 2025 DateX. Все права защищены.
+    &copy; 2025 DateX. Все права защищены.
   </footer>
 </body>
 </html>
