--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DateX | Дейтинговое агентство</title>
+  <title>DateX</title>
+  <link rel="stylesheet" href="style.css">
+</head>
   <style>
     body {
       margin: 0;
