--- a/index.html
+++ b/index.html
@@ -1,8 +1,49 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DateX</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
+<body>
+
+  <header>
+    <h1>DATEX</h1>
+    <p>Знайомства для кожного!</p>
+  </header>
+
+  <nav>
+    <a href="#services">Послуги</a>
+    <a href="#reviews">Відгуки</a>
+    <a href="#contact">Контакти</a>
+  </nav>
+
+  <section id="services">
+    <h2>Наші Послуги</h2>
+    <ul>
+      <li>Індивідуальний підбір партнерів</li>
+      <li>Фотосесії для профілю</li>
+      <li>Психологічна підтримка</li>
+      <li>Супровід та консультації</li>
+    </ul>
+  </section>
+
+  <section id="reviews">
+    <h2>Відгуки</h2>
+    <blockquote>“Найкращий сервіс! Завдяки DateX я знайшла своє кохання.” — Аліна</blockquote>
+    <blockquote>“Все дуже професійно та зручно.” — Олександр</blockquote>
+  </section>
+
+  <section id="contact">
+    <h2>Контакти</h2>
+    <p>Email: info@datex.agency</p>
+    <p>Телефон: +380 XX XXX XXXX</p>
+  </section>
+
+  <footer>
+    <p>© 2025 DateX Agency. Усі права захищено.</p>
+  </footer>
+
+</body>
+</html>
